# mm7dread

./: Makefile  Makefile.global.in  README.md  build.bat  configure  configure.in
config/: mkshortcut.vbs
desktop/: Makefile  mm7dread.desktop
documents/: INSTALL  Makefile  README  changelog  copyright
languages/: Makefile  mm7dread.pot  mm7dread_hu.mo  mm7dread_hu.po
manuals/: Makefile  mm7dread-http.1.in  mm7dread-modbus-rtu.1.in  mm7dread-modbus-tcp.1.in  mm7dread.1.in  mm7dread_en.1
messages/: Makefile  mm7dread.pot  mm7dread_hu.mo  mm7dread_hu.po
packaging/freebsd-txz/: Makefile  pkg-descr  pkg-plist
packaging/linux-bin/: create_links  install  remove_links  uninstall
packaging/linux-deb/: control  md5sums  mm7dread  postinst  prerm
packaging/linux-deb-amd64/: control  md5sums
packaging/linux-deb-armhf/: control  md5sums  postinst
packaging/linux-deb-i386/: control  md5sums  postinst
packaging/windows-exe/: mm7dread-0.1.nsi  mm7dread-0.2.nsi  mm7dread-0.3.nsi  mm7dread-0.4.nsi
packaging/windows-msi/: mm7dread-0.1.xml  mm7dread-0.2.xml  mm7dread-0.3.xml  mm7dread-0.4.xml
scripts/: Makefile  mm7dread-http  mm7dread-modbus-rtu  mm7dread-modbus-tcp
source/: Makefile  config.pas.in  frmmain.lfm  frmmain.lrj  frmmain.lrt  frmmain.pas  mm7dread.lpi  mm7dread.lpr  mm7dread.lps  mm7dread.res  untcommonproc.pas
source/mm7dread/: config.pas.in  frmmain.lfm  frmmain.lrj  frmmain.lrt  frmmain.pas  mm7dread.lpi  mm7dread.lpr  mm7dread.lps  mm7dread.res  untcommonproc.pas
